# claude-code-search

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude-code-search-design.md  pyproject.toml
docs/agent/: handbook.md
src/claude_code_search/: __init__.py  __main__.py  cli.py  formatters.py  index.py  parsers.py  schema.sql
src/claude_code_search/loaders/: __init__.py  base.py  local.py  web.py
src/claude_code_search/server/: __init__.py  app.py  models.py
src/claude_code_search/static/: index.html
tests/: __init__.py  conftest.py  test_index.py  test_interactions.py  test_loaders.py  test_parsers.py  test_server.py
tests/fixtures/: sample_session.jsonl
tests/unit/: test_cli.py  test_index.py  test_loaders.py  test_parsers.py  test_server.py  test_static.py
