[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-search"
version = "0.1.0"
description = "Search across Claude Code transcripts with a CLI and web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Claude Code Search" }]

dependencies = [
  "click>=8.1",
  "click-default-group>=1.2",
  "duckdb>=1.0",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "questionary>=2.0",
  "rich>=13.7",
  "ruff>=0.5",
  "ty>=0.0.1",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
claude-code-search = "claude_code_search.cli:cli"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"claude_code_search" = ["schema.sql", "static/*"]
